# my_agent

./: README.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/my_agent/: crew.py  main.py
src/my_agent/config/: agents.yaml  tasks.yaml
src/my_agent/tools/: custom_tool.py
