[project]
name = "my_agent"
version = "0.1.0"
description = "my_agent using crewAI"
authors = [{ name = "Rajeev Singh", email = "rajeesing@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
my_agent = "my_agent.main:run"
run_crew = "my_agent.main:run"
train = "my_agent.main:train"
replay = "my_agent.main:replay"
test = "my_agent.main:test"
run_with_trigger = "my_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
